# mta-data

./: .gitignore  README.md  pyproject.toml
data/: MTA_Subway_Terminal_On-Time_Performance__2015-2019_20240206.csv  MTA_Subway_Terminal_On-Time_Performance__Beginning_2020_20240206.csv
notebooks/: 20240206-explore-data.ipynb  TEMPLATE.ipynb
notebooks/.ipynb_checkpoints/: 20240206-explore-data-checkpoint.ipynb
notebooks/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
references/: MTA_SubwayOTP20152019_DataDictionary.pdf:Zone.Identifier  MTA_SubwayOTP20152019_Overview.pdf:Zone.Identifier  MTA_SubwayServiceDelivered_DataDictionary.pdf:Zone.Identifier  MTA_SubwayServiceDelivered_Overview.pdf:Zone.Identifier
