[tool.poetry]
name = "mta-data"
version = "0.1.0"
description = ""
authors = ["Kevin Vu <vu.kevin.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.4"
ipykernel = "^6.29.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
